Fix z-index

--- a/src/quick-filter.css
+++ b/src/quick-filter.css
@@ -23,6 +23,7 @@
   text-align: start;
   font-weight: normal;
   color: var(--text-color);
+  position: relative;
   z-index: 1;
 }
 
